--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -7,7 +7,24 @@
 
         <h2>LEAPS data policy and data protection</h2>
 
+        <p>To use the LEAPS online form you must agree to your details being held on behalf of LEAPS by a third party provider for administration and 
+          tracking purposes, and being used by LEAPS to contact you in the future.</p>
 
+        <p>LEAPS would like to track your progress through LEAPS events, at the end of this school year, and 
+          through Further and/or Higher Education Institutions in order to support future LEAPS students. We 
+          will hold your details for up to eight years. We will take information from this online interview form.</p>
+
+        <p>LEAPS staff may request information from Skills Development Scotland and/or Further and Higher 
+          Education Institutions as required for tracking purposes.</p>
+
+        <p>In order to support your applications to Further and Higher Education Institutions, LEAPS may 
+          selectively make some interview information available to your school and to Further and Higher 
+          Education admissions staff and may also access your application details via the UCAS website.</p>
+
+        <p>If you would like further information regarding our data protection policy, or to opt out of any of the 
+          above, please contact LEAPS at leaps@ed.ac.uk or on 0131 650 4676.</p>
+
+<!--
         <p>The information you supply to LEAPS includes personal data such as name, date of birth, home address, postcode and details 
         that will be used to support your applications to further and higher education institutions.</p>
 
@@ -42,7 +59,8 @@
 
         <p>You must agree to our data policy in order to proceed with this online form and complete your registration for LEAPS support. 
         If you have any concerns, please feel free to contact the LEAPS Office on 0131 650 4676 or <a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a></p>
-
+-->
+      
     </div>
 </div>
 
