--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -236,7 +236,7 @@ jQuery(document).ready(function() {
  		var movearchive = function(event) {
 				event.preventDefault();
 				var archive = $('#archiveselection').val();
-				var url = window.location.pathname + '/archive/' + archive
+				var url = window.location.pathname + '/archive/' + archive.replace('/','______');
 				$.ajax({
 						method:'POST',
 						url:url
