--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -238,7 +238,7 @@ jQuery(document).ready(function() {
 				var archive = $('#archiveselection').val();
 				var url = window.location.pathname + '/archive/' + archive.replace('/','______');
 				$.ajax({
-						method:'POST',
+						method:'GET',
 						url:url
 				});
 				alert('Record move to ' + archive + '. Please exit this record and go back to manage supporting data.');
