changing student and survey pages layout and altering student pae email method

--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -69,7 +69,16 @@ jQuery(document).ready(function() {
 
     // fit a static row remover for old content
     $('table.multidisplay').find('tbody').children('tr').each(function() {
+				{% if current_user.do_admin %}
         var adder = '<a class="btn btn-warning static-delete-row" style="margin:-10px 2px 0 0;" href="#">delete</a>';
+				{% else %}
+				var adder;
+				if ( !$(this).parents('table').hasClass('isapplications') ) {
+        	adder = '<a class="btn btn-warning static-delete-row" style="margin:-10px 2px 0 0;visibility:hidden;" href="#">delete</a>';
+				} else {
+        	adder = '<a class="btn btn-warning static-delete-row" style="margin:-10px 2px 0 0;" href="#">delete</a>';
+				}
+				{% endif %}
         adder += '<a class="btn edit-row" style="margin:-10px 2px 0 0;';
         if ( !$(this).parents('table').hasClass('editablerows') ) { adder += 'visibility:hidden;'; }
         adder += '" href="#">edit</a>';
@@ -116,7 +125,7 @@ jQuery(document).ready(function() {
         $(this).children('td').first().prepend('<a class="btn btn-warning delete-row" style="margin:-10px 47px 0 0;" href="#">delete</a>').children('select, input').addClass('narrow');
     });
     $('.edit-row').bind('click',editrow);
-    $('table.multi').find('tbody').append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
+
     var addrow = function(event) {
         event.preventDefault();
         var maxrows = 50;
@@ -129,7 +138,17 @@ jQuery(document).ready(function() {
             preprow(row);
         }
     }
+		{% if current_user.do_admin %}
+		$('table.multi').find('tbody').append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
+		{% else %}
+		if ( !$(this).parents('table').hasClass('isapplications') ) {
+			$('table.multi').find('tbody').each(function() {
+				$(this).append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
+			};
+		}
+		{% endif %}
     $('.add-row').bind('click',addrow);
+		
     var deleterow = function(event) {
         event.preventDefault();
         var row = $(this).closest('tr').clone(true).get(0);
@@ -682,7 +701,7 @@ fieldset{
 
 	<div class="row-fluid">
 	    <div class="span12">		
-	        <table class="multidisplay">
+	        <table class="multidisplay isapplications">
                 <thead>
                     <tr>
                         <th style="min-width:200px;">College / University</th>
