--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -328,7 +328,7 @@ input.bigfield{
                 		</select></td>
 
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">Gender</td>
-                		<td><select name="gender">
+                		<td><select name="gender" data-required="true">
                 		    <option></option>
                 		    <option>Male</option>
                 		    <option>Female</option>
