adding new schools/unis data policy

--- a/portality/templates/account/policy.html
+++ b/portality/templates/account/policy.html
@@ -9,7 +9,29 @@
 <div class="row-fluid">
     <div class="span12">
         <h1>In order to use this online system, you must first agree to our terms of use and data protection policy.</h1>
-        <p>Blurb about data protection from school / institution perspective - access to personal data, don't share password, let LEAPS know asap when people leaving / access should change, don't leave computers logged in to the system, any breach of personal data security due to misuse of this system is own responsibility, etc</p>
+
+        <p>LEAPS Survey Database - Schools &amp; Universities Access Policy</p>
+ 
+        <p>I acknowledge that I am responsible for the security, privacy and control of the confidential data in my possession as 
+          taken from the leapssurvey.org database.</p>
+
+        <p>Due to the personal and time-sensitive nature of the confidential data I am accessing via the leapssurvey.org database, 
+          I agree to the following:</p>
+
+        <ul>
+        <li>To access and share data responsibly, and solely on a legitimate need-to-know basis, in order to support students' applications 
+          to Further and Higher Education institutions.</li>
+        <li>To securely store any data I access (in any format).</li>
+        <li>To protect any data in my possession from unauthorised use, disclosure or alteration.</li>
+        <li>To securely destroy any data I access and retain as soon as it is no longer needed.</li>
+        <li>To keep my individual log-in credentials confidential.</li>
+        <li>To advise LEAPS as soon as possible if my log-in credentials are no longer required.</li>
+        <li>To securely log-out of leapssurvey.org database each time I use it.</li>
+        </ul>
+ 
+        <p>If you would like further information regarding our data protection policy, please contact LEAPS at 
+          <a href="mailto:leaps@ed.ac.uk">leaps@ed.ac.uk</a> or on 0131 650 4676.</p>
+
         <form method="POST" action="">
             <input class="btn" type="submit" name="submit" value="I agree to the LEAPS terms of use and data protection policy">
         </form>
