--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -94,7 +94,7 @@ jQuery(document).ready(function() {
                     </tr>
         	        <tr>
 	                    <td><input type="checkbox" name="home_phone"> Home phone</td>
-	                    <td></td>
+	                    <td><input type="checkbox" name="simd_pc"> SIMD %</td>
                         <td><input type="checkbox" name="issues_affecting_performance"> Issues affecting performance</td>
                 		<td><input type="checkbox" name="hn_only_candidate"> HN only candidate</td>
                     </tr>
@@ -146,6 +146,20 @@ jQuery(document).ready(function() {
 	                    <td></td>
 	                    <td><input type="checkbox" name="summer_school"> Summer school</td>
 	                    <td><input type="checkbox" name="main_language_at_home"> Main language at home</td>
+                    </tr>
+
+        	        <tr>
+	                    <td></td>
+	                    <td></td>
+	                    <td></td>
+	                    <td><input type="checkbox" name="simd20"> SIMD 20</td>
+                    </tr>
+								
+        	        <tr>
+	                    <td></td>
+	                    <td></td>
+	                    <td></td>
+	                    <td><input type="checkbox" name="simd40"> SIMD 40</td>
                     </tr>
 
                 </tbody>
