--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -393,7 +393,7 @@ input.bigfield{
 	    <div class="span12">
 	        <div class="well">
 	            <h2>Qualifications and currently sitting</h2>
-	            <p><strong>Part 2 of 6</strong> - <strong>Please input details of all qualifications you have (or are studying for current year) for each year of school</strong>. <br>Please include any qualifications you sat but did not pass.<br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
+	            <p><strong>Part 2 of 6</strong> - <strong>Please input details of all qualifications you have (or are studying for current year) for each year of school</strong>. <br><b>Please include any qualifications you sat but did not pass.</b><br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
 	        </div>
 	    </div>
 	</div>
