--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -462,6 +462,14 @@ fieldset{
                 		{% if record %} value="{{record.data.post_code}}"{% endif %}
                 		></td>
                     </tr>
+        	        <tr>
+        	            <td></td>
+        	            <td></td>
+	                    <td style="text-align:right;padding:6px 10px 0 100px;">SIMD %</td>
+                		<td colspan="3">
+                		{% if record %}{{record.data.simd_pc}}{% endif %}
+                		</td>
+                    </tr>
                 </tbody>
 	        </table>
 	    </div>
@@ -530,11 +538,12 @@ fieldset{
                     <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Status</td>
                 		<td><select name="status">
-                		    {% if record %}{% if record.data.status not in ["new", "not_eligible_interviewed", "not_eligible_not_interviewed", "not_applying", "awaiting_interview", "interviewed", "absent", "query", "paes_requested", "paes_in_progress", "paes_complete", "complete"] %}<option style="color:red;" selected="selected">{{record.data.status}}</option>{% endif %}{% endif %}
+                		    {% if record %}{% if record.data.status not in ["new", "not_eligible_interviewed", "not_eligible_not_interviewed", "not_applying_interviewed", "not_applying_not_interviewed", "awaiting_interview", "interviewed", "absent", "query", "paes_requested", "paes_in_progress", "paes_complete", "complete"] %}<option style="color:red;" selected="selected">{{record.data.status}}</option>{% endif %}{% endif %}
                 		    <option>new</option>
               		        <option{% if record %}{% if record.data.status == "not_eligible_interviewed" %} selected="selected"{% endif %}{% endif %}>not_eligible_interviewed</option>
               		        <option{% if record %}{% if record.data.status == "not_eligible_not_interviewed" %} selected="selected"{% endif %}{% endif %}>not_eligible_not_interviewed</option>
-              		        <option{% if record %}{% if record.data.status == "not_applying" %} selected="selected"{% endif %}{% endif %}>not_applying</option>
+              		        <option{% if record %}{% if record.data.status == "not_applying_interviewed" %} selected="selected"{% endif %}{% endif %}>not_applying_interviewed</option>
+              		        <option{% if record %}{% if record.data.status == "not_applying_not_interviewed" %} selected="selected"{% endif %}{% endif %}>not_applying_not_interviewed</option>
               		        <option{% if record %}{% if record.data.status == "awaiting_interview" %} selected="selected"{% endif %}{% endif %}>awaiting_interview</option>
               		        <option{% if record %}{% if record.data.status == "interviewed" %} selected="selected"{% endif %}{% endif %}>interviewed</option>
               		        <option{% if record %}{% if record.data.status == "absent" %} selected="selected"{% endif %}{% endif %}>absent</option>
@@ -1023,8 +1032,12 @@ fieldset{
 
                     </tr>
                     <tr style="height:40px;">
-                        <td></td>
-                        <td></td>
+												<td><input type="checkbox" name="simd20"
+												{% if record %}{% if record.data.simd20 %} checked="checked"{% endif %}{% endif %}
+												> SIMD 20</td>
+												<td><input type="checkbox" name="simd40"
+												{% if record %}{% if record.data.simd40 %} checked="checked"{% endif %}{% endif %}
+												> SIMD 40</td>
                         <td><input type="checkbox" name="summer_school"
                 		{% if record %}{% if record.data.summer_school %}{% if record.data.summer_school == "yes" %} checked="checked"{% endif %}{% endif %}{% endif %}
                 		> Summer school</td>
@@ -1089,7 +1102,7 @@ fieldset{
 	    <div class="span6">
           	<input id="save" class="btn btn-success span2" style="margin-left:100px;" type="submit" name="submit" value="Save" />
 	    </div>
-	    {% if record and current_user.do_admin %}
+	    {% if record and current_user.edit_students %}
 	    <div class="span6">
     	    <input id="delete" class="btn btn-danger span2" style="margin-left:100px;" type="submit" name="submit" value="Delete">
 	    </div>
