adding config files, and fixes for July 2017 to PAE statements

--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -92,11 +92,11 @@ jQuery(document).ready(function() {
             display: "Created date"
           },
           {
-            field: "last_name.exact",
+            field: "last_name",
             display: "Last name"
           },
           {
-            field: "first_name.exact",
+            field: "first_name",
             display: "First name"
           },
           {
