--- a/portality/templates/leaps/universities/pae.html
+++ b/portality/templates/leaps/universities/pae.html
@@ -117,7 +117,7 @@ jQuery(document).ready(function() {
             <h2>Further information</h2>
             <p>
             {% if student.simd_pc == "10" or student.simd_pc == "20" %}
-                This student has a home post code relating to SIMD {{record.simd_pc}}%<br />
+                This student has a home post code relating to SIMD {{student.simd_pc}}%<br />
             {% endif %}
             {% if student.first_attending_university %}
                 This student is the first from their family attending university<br />
